2006-12-01  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add "video/flv" as supported, as used
	on YouTube

2006-11-30  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_option_group): Fix xine-lib build
	* src/totem-video-indexer.c: (main): error out if we don't have
	exactly one filename
	* src/totem.c: (main): kill gtk_init() by adding the gtk GOptionGroup
	to the help context

	Thanks again to Christian Persch

2006-11-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_get_option_group): Remove useless cast
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_option_group),
	(bacon_video_widget_init_backend): Fix xine-lib build
	* src/totem-options.c: (totem_options_process_for_server):
	Return early if we don't have any filenames to pass
	* src/totem-options.h: Put the "seek to" option in a gint64
	* src/totem-session.c: (totem_save_yourself_cb): Fix thinko, and
	properly set the playlist name to be a URI
	* src/totem-video-indexer.c: (main): Finish porting to GOption
	* src/totem.c: (main): Fix option parsing when using the GTK+ only
	version

	GOption-related fixes, with help from Christian Persch
	<chpe@cvs.gnome.org>

2006-11-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in: upd the glib and libgnome requirements
	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_get_option_group),
	(bacon_video_widget_init_backend):
	* src/backend/bacon-video-widget.h:
	* src/totem-options.c: (totem_options_process_late),
	(totem_options_process_early), (totem_options_process_for_server):
	* src/totem-options.h:
	* src/totem-private.h:
	* src/totem-session.c: (totem_save_yourself_cb),
	(totem_session_setup), (totem_session_restore):
	* src/totem-session.h:
	* src/totem-video-indexer.c: (main):
	* src/totem-video-thumbnailer.c:
	* src/totem.c: (main): Adapted patch from Luis Menina