@@ -68,3 +68,5 @@ application/x-quicktimeplayer
 image/x-pict
 audio/x-wav
 audio/basic
+text/x-google-video-pointer
+text/google-video-pointer
